changing the title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarbajit Ghosh - Mathematician</title>
+    <title>Sarbi's Metarepresentation</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cascadia+Code&display=swap');
         body {
