--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@
         </div>
         <div id="nav">
             <a href="#cv">CV</a>
-            <a href="#books">Books</a>
+            <!-- <a href="#books">Books</a>
             <a href="#projects">Projects</a>
-            <a href="#thoughts">Thoughts</a>
+            <a href="#thoughts">Thoughts</a> -->
         </div>
     </div>
     <div class="social-links">
-        <a href="https://github.com/sarbajitghosh20" target="_blank">GitHub</a>
-        <a href="https://bsky.app/profile/sarbajitghosh.bsky.social" target="_blank">Bluesky</a>
-        <a href="https://www.goodreads.com/user/show/171673232-sarbajit-ghosh" target="_blank">Goodreads</a>
-        <a href="https://letterboxd.com/sarbajitghosh/" target="_blank">Letterboxd</a>
-        <a href="https://mathstodon.xyz/@sarbajitghosh" target="_blank">Mathstodon</a>
+        <a href="https://github.com/goldilock-zone" target="_blank">GitHub</a>
+        <a href="https://bsky.app/profile/philymathy.bsky.social" target="_blank">Bluesky</a>
+        <a href="https://www.goodreads.com/user/show/65629769-sarbajit-ghosh" target="_blank">Goodreads</a>
+        <a href="https://boxd.it/b95t1 " target="_blank">Letterboxd</a>
+        <a href="https://mathstodon.xyz/@maybe_algebraiclogic" target="_blank">Mathstodon</a>
     </div>
     <script>
         const canvas = document.getElementById("mandelbrotCanvas");
