--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div id="about"> Mathematician - philosopher in training.</div>
         </div>
         <div id="nav">
-            <a href="#cv">CV</a>
+            <a href="https://drive.google.com/file/d/1ATy7zNMntgOcx21skhRCw_oaKuIKXdCS/view?usp=sharing">CV</a>
             <!-- <a href="#books">Books</a>
             <a href="#projects">Projects</a>
             <a href="#thoughts">Thoughts</a> -->
